--- a/README
+++ b/README
@@ -1,3 +1,13 @@
 Esse projeto tem como objetivo desenvolver (em python, com auxilio da biblioteca flask) um website que armazena Special Issues de diferentes revistas de artigos na área de ciência da computação. 
 Além de armazenar, o site irá mostrar as Special Issues disponíveis e permitirá que um admin. insira novas chamadas.
-Um breve esboço da aparência do site pode ser visualizada no arquivo sketch. 
+## Como rodar o projeto
+- Após clonar o repositório, abrir um terminal:
+- Instalar o ambiente virtual
+```pip install virtualenv
+python -m virtualenv myvenv
+myvenv/Scripts/Activate (Windows)
+source myvenv/bin/activate (Linux ou macOS) 
+```
+- Instalar as dependências do projeto
+``` pip install -r requirements.txt
+```
